[package]
name = "bitcoin-script-dsl"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script", tag = "1.0.0" }
bitcoin = "0.32.0"
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec/", tag = "1.0.0", features = ["debug"] }
fenwick-tree = "0.1.0"
anyhow = "1.0.86"
clap = { version = "4.5.18", features = ["derive"] }
serde = "1.0.210"
bincode = "1.3.3"
sha2 = "0.10.8"
rust-bitcoin-m31 = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-m31", tag = "1.0.0" }
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo", tag = "for-fibonacci" }
num-traits = "0.2.19"
bitcoin-circle-stark = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/bitcoin-circle-stark", tag = "1.0.0" }

[features]
assume-op-cat = []