[package]
name = "bitcoin-script-dsl"
version = "0.2.0"
edition = "2021"

[dependencies]
indexmap = "2.7.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script"}
bitcoin = "0.32.5"
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec/", features = ["debug"] }
fenwick-tree = "0.1.0"
anyhow = "1.0.94"
serde = "1.0.216"
bincode = "1.3.3"
sha2 = "0.10.8"
num-traits = "0.2.19"

[features]
assume-op-cat = []